snapshots/care/data4life/hc-util-sdk-kmp/error/maven-metadata.xml.sha1
3e3b4a16c453237e9a83bc516f928fb1f064ba3e